# diart

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  clustering.py  environment.yml  functional.py  main.py  mapping.py  operators.py  paper.bib  paper.md  pipelines.py  requirements.txt  setup.cfg  sinks.py  sources.py  utils.py
.github/: FUNDING.yml
.github/workflows/: draft-pdf.yml  lint.yml  quick-runs.yml  run-tests.yml
docs/: conf.py  index.rst  requirements.txt
expected_outputs/latency_1s/: DIHARD3.rttm
expected_outputs/latency_2s/: DIHARD3.rttm
expected_outputs/offline/vbx/: AMI.rttm  DIHARD2.rttm  VoxConverse.rttm
expected_outputs/offline/vbx+overlap-aware-segmentation/: DIHARD2.rttm  DIHARD3.rttm  VoxConverse.rttm
expected_outputs/offline/vbx+overlap_aware_segmentation/: AMI.rttm
expected_outputs/online/3.0s/: DIHARD3.rttm
expected_outputs/online/5.0s/: AMI.rttm
expected_outputs/online/5.0s-overlap_aware_embeddings/: VoxConverse.rttm
expected_outputs/online/latency_1s/: DIHARD2_reoptimized.rttm
expected_outputs/online/latency_4s/: VoxConverse.rttm
expected_outputs/online/latency_500ms/: VoxConverse.rttm
expected_outputs/online/latency_5s/with_oracle_segmentation/: DIHARD2.rttm
expected_outputs/ours/latency_3s/: VoxConverse.rttm
expected_outputs/ours/latency_4s/: DIHARD3.rttm
expected_outputs/ours/latency_5s/ours/: DIHARD2.rttm
expected_outputs/ours/latency_5s/with_oracle_segmentation/: AMI.rttm
expected_outputs/ours/latency_5s/without_overlap_aware_embeddings/: AMI.rttm
models/segmentation/: asru2021.yml
outputs/latency_1s/: AMI.rttm  VoxConverse.rttm
outputs/latency_2s/: AMI.rttm  VoxConverse.rttm
outputs/latency_3s/: AMI.rttm
outputs/latency_4s/: AMI.rttm
outputs/latency_500ms/: AMI.rttm
outputs/latency_5s/ours/: DIHARD3.rttm  VoxConverse.rttm
outputs/latency_5s/with_oracle_segmentation/: DIHARD3.rttm  VoxConverse.rttm
outputs/latency_5s/without_overlap_aware_embeddings/: DIHARD2.rttm  DIHARD3.rttm
src/: main.py  sinks.py
src/diart/: __init__.py  argdoc.py  audio.py  benchmark.py  blocks.py  demo.py  features.py  functional.py  inference.py  main.py  mapping.py  metrics.py  models.py  operators.py  optim.py  pipelines.py  progress.py  serve.py  sinks.py  sources.py  stream.py  tune.py  types.py  utils.py
src/diart/blocks/: __init__.py  aggregation.py  asr.py  base.py  clustering.py  config.py  diarization.py  embedding.py  pseudo_diarization.py  segmentation.py  stitching.py  utils.py  vad.py
src/diart/console/: benchmark.py  client.py  serve.py  stream.py  tune.py
src/diart/pipelines/: __init__.py  base.py  diarization.py  hparams.py  speaker_transcription.py  transcription.py  voice.py
src/streaming_speaker_diarization/: functional.py  main.py  operators.py  pipelines.py
tests/: conftest.py  test_aggregation.py  test_diarization.py  utils.py
