[metadata]
name=diart
version=0.2.1
author=Juan Manuel Coria
description=Streaming speaker diarization
long_description=file: README.md
long_description_content_type = text/markdown
keywords=speaker diarization, streaming, online, real time, rxpy
url=https://github.com/juanmc2005/StreamingSpeakerDiarization
license=MIT
classifiers=
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Topic :: Multimedia :: Sound/Audio :: Speech
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir=
    =src
packages=find:
install_requires =
    numpy>=1.20.2
    matplotlib>=3.3.3
    rx>=3.2.0
    scipy>=1.6.0
    sounddevice>=0.4.2
    einops>=0.3.0
    pyannote-audio @ git+https://github.com/pyannote/pyannote-audio.git@develop#egg=pyannote-audio


[options.packages.find]
where=src
