[metadata]
name=diart
version=0.6.0
author=Juan Manuel Coria
description=Speaker diarization in real time
long_description=file: README.md
long_description_content_type = text/markdown
keywords=speaker diarization, streaming, online, real time, rxpy
url=https://github.com/juanmc2005/StreamingSpeakerDiarization
license=MIT
classifiers=
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Topic :: Multimedia :: Sound/Audio :: Analysis
    Topic :: Multimedia :: Sound/Audio :: Speech
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
package_dir=
    =src
packages=find:
install_requires=
    numpy>=1.20.2
    matplotlib>=3.3.3
    rx>=3.2.0
    scipy>=1.6.0
    sounddevice>=0.4.2
    einops>=0.3.0
    tqdm>=4.64.0
    pandas>=1.4.2
    torch>=1.12.1
    torchaudio>=0.12.1,<1.0
    pyannote.audio>=2.1.1
    pyannote.core>=4.5
    pyannote.database>=4.1.1
    pyannote.metrics>=3.2
    optuna>=2.10
    websockets>=10.3

[options.packages.find]
where=src

[options.entry_points]
console_scripts=
    diart.stream=diart.stream:run
    diart.benchmark=diart.benchmark:run
    diart.tune=diart.tune:run
